...
        }

        Spacer(modifier = Modifier.width(12.dp))

        Column {
            Text(
                text = "Hello 👋",
                fontFamily = InterFontFamily,
                fontSize = 13.sp,
                color = MaterialTheme.colorScheme.onSurfaceVariant
            )
            Text(
                text = userName,
...
